修改靜態頁面

--- a/views/banned.pug
+++ b/views/banned.pug
@@ -4,10 +4,10 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    title PoW Shield
+    title Cloudflare
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/bundle.min.js')
   body
     .container
-      h1 PoW Shield
-      p Your IP has triggered internal rules and will be banned for a period of time
+      h1 Cloudflare
+      p 您的IP已触发内部规则，将被封禁一段时间
