--- a/views/pow.pug
+++ b/views/pow.pug
@@ -13,16 +13,16 @@ html
       p.rayid Ray ID: #{prefix}-#{difficulty}
       table
         tr.calculating
-          td.w-full Calculating Nonce 
+          td.w-full 浏览器环境安全检查中
           td.w30.blink ...
         tr.submitting
-          td.w-full Submitting Result
+          td.w-full 系统评分提交中
           td.blink ...
         tr.success
-          td.w-full Redirecting
+          td.w-full 重定向中
           td.blink ...
         tr.failed
-          td.w-full Failed, Retrying
+          td.w-full 失败，重试中
           td.blink ...
     script(src='/javascripts/main.min.js')
     script.
