--- a/views/waf.pug
+++ b/views/waf.pug
@@ -4,10 +4,10 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    title PoW Shield
+    title Cloudflare
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/bundle.min.js')
   body
     .container
-      h1 PoW Shield
-      p Your request has triggered WAF rules and has been blocked
+      h1 Cloudflare
+      p 您的请求已触发WAF规则并已被阻止
